--- a/index.html
+++ b/index.html
@@ -12,13 +12,38 @@
 <body>
   <header class="header"> <!-- 2 -->
     <nav class="nav"></nav> <!-- 1 -->
-    <div class="header__content"></div> <!-- 2 -->
+    <div class="header__content">
+      <h1 class="header__title">NIKE</h1>
+      <p class="header__desc">Крутые кроссовки от <strong>NIKE</strong> для вас</p>
+    </div> <!-- 2 -->
   </header>
   <main>
     <section class="news"> <!-- 3 -->
-      <h2 class="title"></h2> <!-- 4 -->
-      <div class="news__list"> <!-- 3 -->
-        <div class="news__card"></div> <!-- 3 -->
+      <div class="container">
+        <h2 class="title"></h2> <!-- 4 -->
+        <div class="news__list"> <!-- 3 -->
+          <div class="news__card">
+            <img src="./img/news-1.jpg" alt="" class="news__img">
+            <h3 class="news__title">Shoe Review: Nike React</h3>
+            <p class="news__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lorem fermentum, sed tincidunt. Hac malesuada id id quis interdum odio odio. Amet viverra lacus, integer aliquam. Ultrices erat magna adipiscing massa.
+            </p>
+            <a href="" class="news__link">VIEW</a>
+          </div> <!-- 3 -->
+          <div class="news__card">
+            <img src="./img/news-2.jpg" alt="" class="news__img">
+            <h3 class="news__title">Shoe Review: Nike React</h3>
+            <p class="news__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lorem fermentum, sed tincidunt. Hac malesuada id id quis interdum odio odio. Amet viverra lacus, integer aliquam. Ultrices erat magna adipiscing massa.
+            </p>
+            <a href="" class="news__link">VIEW</a>
+          </div> <!-- 3 -->
+          <div class="news__card">
+            <img src="./img/news-3.jpg" alt="" class="news__img">
+            <h3 class="news__title">Shoe Review: Nike React</h3>
+            <p class="news__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lorem fermentum, sed tincidunt. Hac malesuada id id quis interdum odio odio. Amet viverra lacus, integer aliquam. Ultrices erat magna adipiscing massa.
+            </p>
+            <a href="" class="news__link">VIEW</a>
+          </div> <!-- 3 -->
+        </div>
       </div>
     </section>
     <section class="products"> <!-- 6 -->
