--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
   </header>
   <main>
     <section class="news"> <!-- 3 -->
-      <h2 class="title"></h2> <!-- 4 -->
+      <h2 class="title">MAIN NEWS 
+        <a href="" class="title__link">All</a>
+      </h2> <!-- 4 -->
       <div class="news__list"> <!-- 3 -->
         <div class="news__card"></div> <!-- 3 -->
       </div>
     </section>
     <section class="products"> <!-- 6 -->
-      <h2 class="title"></h2> <!-- 4 -->
+      <h2 class="title">PRODUCTS 
+        <a href="" class="title__link">All</a>
+      </h2> <!-- 4 -->
       <div class="products__news"></div> <!-- 5 -->
       <div class="products__list"> <!-- 6 -->
         <div class="products__card"></div> <!-- 7 -->
@@ -30,7 +34,7 @@
     </section>
     <section class="ads"></section> <!-- 8 -->
     <section class="express"> <!-- 9 -->
-      <h2 class="title"></h2> <!-- 4 -->
+      <h2 class="title title__express">EXPRESS YOUR STYLE</h2> <!-- 4 -->
       <div class="express__wrapper"> <!-- 9 -->
         <div class="express__card"></div> <!-- 10 -->
       </div>
