--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
 </head>
 <body>
   <header class="header"> <!-- 2 -->
-    <nav class="nav"></nav> <!-- 1 -->
+    <nav class="nav">
+      <div class="container">
+      <a href="" class="nav__img"><img src="./img/logo.svg" alt=""></a>
+      <button class="bars">
+        <img class="bars__img" src="./img/bars-solid.svg" alt="">
+      </button>
+      <ul class="nav__ul">
+          <li class="nav__link"><a href="">Кроссовки</a></li>
+          <li class="nav__link"><a href="">Кеды</a></li>
+          <li class="nav__link"><a href="">Футболки</a></li>
+          <li class="nav__link"><a href="">Шорты</a></li>
+          <li class="nav__link"><a href="">Майки</a></li>
+          <li class="nav__link"><a href="">Олимпийки</a></li>
+          <li class="nav__link"><a href="">Толстовки</a></li>
+      </ul>
+    </div>
+    </nav> <!-- 1 -->
     <div class="header__content"></div> <!-- 2 -->
   </header>
   <main>
