--- a/index.html
+++ b/index.html
@@ -15,10 +15,30 @@
     <div class="header__content"></div> <!-- 2 -->
   </header>
   <main>
-    <section class="news"> <!-- 3 -->
+    <section class="news container"> <!-- 3 -->
       <h2 class="title"></h2> <!-- 4 -->
       <div class="news__list"> <!-- 3 -->
-        <div class="news__card"></div> <!-- 3 -->
+        <div class="news__card">
+          <img src="./img/news-1.jpg" alt="">
+          <h3 class="new__title">Shoe Review: Nike React</h3>
+          <p class="new__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed lorem fermentum, sed tincidunt. Hac malesuada id id quis interdum odio odio. Amet viverra lacus, integer aliquam. Ultrices erat magna adipiscing massa.
+          </p>
+          <a class="new__a" href="">VIEW</a>
+        </div> <!-- 3 -->
+        <div class="news__card">
+          <img src="./img/news-2.jpg" alt="">
+          <h3 class="new__title">Gear Up For Football</h3>
+          <p class="new__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis in egestas in imperdiet viverra libero duis elementum. Lectus sapien id tellus, egestas sit dolor ac. Diam gravida pulvinar ipsum, sit. Egestas enim dolor, sagittis egestas amet amet. Enim.
+          </p>
+          <a class="new__a" href="">VIEW</a>
+        </div> <!-- 3 -->
+        <div class="news__card">
+          <img src="./img/news-3.jpg" alt="">
+          <h3 class="new__title">Gear Up For Football</h3>
+          <p class="new__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis in egestas in imperdiet viverra libero duis elementum. Lectus sapien id tellus, egestas sit dolor ac. Diam gravida pulvinar ipsum, sit. Egestas enim dolor, sagittis egestas amet amet. Enim.
+          </p>
+          <a class="new__a" href="">VIEW</a>
+        </div> <!-- 3 -->
       </div>
     </section>
     <section class="products"> <!-- 6 -->
