--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
         <div class="products__card"></div> <!-- 7 -->
       </div>
     </section>
-    <section class="ads"></section> <!-- 8 -->
+    <section class="ads">
+      <!-- <img src="./img/ads.jpg" alt=""> -->
+      <div class="nike__text">
+        <h1>NIKE</h1>
+        <p>Just Do It</p>
+      </div>
+    </section> <!-- 8 -->
     <section class="express"> <!-- 9 -->
       <h2 class="title"></h2> <!-- 4 -->
       <div class="express__wrapper"> <!-- 9 -->
