--- a/index.html
+++ b/index.html
@@ -1,41 +1,76 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=
-  , initial-scale=1.0">
-  <title>Nike Big</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/media.css">
-</head>
-<body>
-  <header class="header"> <!-- 2 -->
-    <nav class="nav"></nav> <!-- 1 -->
-    <div class="header__content"></div> <!-- 2 -->
-  </header>
-  <main>
-    <section class="news"> <!-- 3 -->
-      <h2 class="title"></h2> <!-- 4 -->
-      <div class="news__list"> <!-- 3 -->
-        <div class="news__card"></div> <!-- 3 -->
-      </div>
-    </section>
-    <section class="products"> <!-- 6 -->
-      <h2 class="title"></h2> <!-- 4 -->
-      <div class="products__news"></div> <!-- 5 -->
-      <div class="products__list"> <!-- 6 -->
-        <div class="products__card"></div> <!-- 7 -->
-      </div>
-    </section>
-    <section class="ads"></section> <!-- 8 -->
-    <section class="express"> <!-- 9 -->
-      <h2 class="title"></h2> <!-- 4 -->
-      <div class="express__wrapper"> <!-- 9 -->
-        <div class="express__card"></div> <!-- 10 -->
-      </div>
-    </section>
-  </main>
-  <footer class="footer"></footer> <!-- 11 -->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=
+  , initial-scale=1.0"
+    />
+    <title>Nike Big</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media.css" />
+  </head>
+  <body>
+    <header class="header">
+      <!-- 2 -->
+      <nav class="nav"></nav>
+      <!-- 1 -->
+      <div class="header__content"></div>
+      <!-- 2 -->
+    </header>
+    <main>
+      <section class="news">
+        <!-- 3 -->
+        <h2 class="title"></h2>
+        <!-- 4 -->
+        <div class="news__list">
+          <!-- 3 -->
+          <div class="news__card"></div>
+          <!-- 3 -->
+        </div>
+      </section>
+      <section class="products">
+        <!-- 6 -->
+        <h2 class="title"></h2>
+        <!-- 4 -->
+        <div class="products__news"></div>
+        <!-- 5 -->
+        <div class="products__list">
+          <!-- 6 -->
+          <div class="products__card"></div>
+          <!-- 7 -->
+        </div>
+      </section>
+      <section class="ads"></section>
+      <!-- 8 -->
+      <section class="express ">
+        <!-- 9 -->
+        <h2 class="title"></h2>
+        <!-- 4 -->
+        <div class="express__wrapper container ">
+          <!-- 9 -->
+          <div class="express__card">
+            <img src="./img/express-1.jpg" alt="" class="express__img">
+            <p class="express__desc">Trending Tees, Tops & More</p>
+          </div>
+          <!-- 10 -->
+          <div class="express__card">
+            <img src="./img/express-2.jpg" alt="" class="express__img">
+            <p class="express__desc">Top Selling Pants & Tights</p>
+          </div>
+          <!-- 10 -->
+          <div class="express__card">
+            <img src="./img/express-3.jpg" alt="" class="express__img">
+            <p class="express__desc">New Bags & Backpacks</p>
+          </div>
+          <!-- 10 -->
+      
+        </div>
+      </section>
+    </main>
+    <footer class="footer"></footer>
+    <!-- 11 -->
+  </body>
 </html>
